# lilygo_device_driver_example

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md  partitions_esp32p4.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
libraries/common/: CMakeLists.txt
libraries/common/src/: common.cpp  common.h  common_lvgl.cpp  common_lvgl.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/examples/aw86224/: main.cpp
main/examples/i2c_scan/: main.cpp
main/examples/network_adapter_update/: main.cpp
main/examples/ota_update/: main.cpp
main/examples/screen_camera/: main.cpp
main/examples/screen_lvgl/: lvgl_demo_ui.c  main.cpp
main/examples/screen_lvgl_touch_draw/: main.cpp
main/examples/sgm38121/: main.cpp
main/examples/sleep/: main.cpp
main/examples/st25r3916/: main.cpp
main/examples/wifi_scan_connect_time/: main.cpp
main/examples/xl9535/: main.cpp
